# Horror.Place

./: 'Create' short-descriptions with a tag for each re.md  .gitignore  AI-Mood.md  CHECKLIST.md  Cargo.toml  Concern-Godot-Unreal-Sharedabstractionsafety.csv  DreadForge-Standard.md  HorrorPlace-vm-constellation.md  MASTERBLUEPRINT.md  README.md  SECURITY.md  TEMPLATE.md  VM-CONSTELLATION.md  chat-export-1774999550609.json  godot_h_run_bridge.gd  horror_api.lua  horror_audio.lua  rivers_of_blood.lua  surprise_system.cpp
.aln/: horrorplace-core-aichat-template.aln
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: schema-contract-change.md
.github/workflows/: daily-schema-audit.yml  guardrail-ci.yml  orchestrate_public_sync.yml  validate-mood-lua.yml  validate-moods.yml  validate-resurrections.yml
WOD.HistoryInvariants.DarkwoodOnly/: horrorinvariants.lua
WorldOfDarkwoodSystems/: CharactersSystemsemotionengine.aln  CharactersSystemspersonalitymatrixschema.json
addons/horror_place/: resurrection_director.gd
artstyles/: machine_canyon_biomech_bci.lua  spectral_engraving_dark_sublime.lua
audio/Hellscape-Mixer/: hp-audio-presets-spectral-seeds-v1.md  hp-hellscape-mixer-cross-repo-spec-v1.md
audit/: acceptance-tests.md  api-audit-plan.md  registry-update-playbook.md
config/services/: drift.detector.config.v1.json
configs/: routing_profiles.toml
core/api/: HorrorPlace_API_Spec_v1.md
core/registry/: events.json  invariants.ndjson  personas.json  regions.json  styles.json
core/schemas/: aln_routing_profile_v1.json  audiolandscape_style_v1.json  entertainment_metrics_v1.json  eventcontractv1.json  experiment_descriptor_v1.json  historyinvariantsv1.json  invariants_v1.json  mood_contract_v1.json  personacontractv1.json  signaturev1.json  stylecontract_v1.json  telemetrytelemetry.schema.v1.json
coreschemas/: seedContractCard.v1.json
cpp/: HorrorAudioDirector.cpp  HorrorAudioDirector.h  stalker_kinematics.cpp
cpp/adapters/: HorrorAudioDirector.h
docs/: AFCS-Hellscape-Audio-Standard.md  AI_CoDesigner_Charter.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCTRINE.md  FailureAtlas.md  Horror.Place Schema Drift Audit Suite — Full Source and Integration Guide.docx  Horror.Place — API Spec and Public API Stubs.docx  Horror.Place — Docs, Audit, and README.docx  Horror.Place — Schemas, Registries, and CI Config.docx  HorrorPlace-VM-Constellation-AI-Research-Architecture.md  HowTo_Add_Mood.md  IMPLEMENTATION-horror-core-wiring-guide-v1.md  MASTERBLUEPRINT.md — Horror$Place System Charter.md  NightWhispers-Zone-NPC-BCI-and-FFI-Spec.md  README-AUDIT.md  SFX_Invariants.md  archivist_contradiction_director_spec.md  archivist_personality_case_study.md  artstyle_machine_canyon_biomech_bci.md  artstyle_rivers_of_blood_spectral_fluid_chrome.md  artstyle_spectral_engraving_dark_sublime.md  bci_metric_research_pilot_v1.md  ci_kms_constellation_binding.md  constellation-researchplan.md  darkwood2-and-beyond-history-driven-horror-rd.md  darkwood2-seed-authoring-guide.md  deadledger_integration_contract.md  gods-image-disaster-warden-spec.md  hellscape_mixer_metric_adaptive_audio_blueprint.md  horror_place_sovereign_blueprint.md  horroraudio-moods-api.md  horrorplace_complete_blueprint.md  horrorplace_copilot_task_overview.md  hp-aln-routing-sprint1-design.md  hp_history_entertainment_framework.md  machine-canyon.md  nightwhispers-view-layer-spec.md  policy_profiles_standard_mature_research.md  (+10 more)
docs/ADR/: 0001-schema-first.md
docs/art-styles/: TerraScape.md  gods-image-disaster-warden-spec.md  gods-image-disaster-warden.md  godwinds-tail-steps.md  godwinds-tail.md  mushroomdrips.md
docs/diagrams/: spectral_library_architecture.mmd  style_router_flow.mmd
docs/overview/: constellation-contracts-intro.md
docs/personas/: personas.md
docs/public-core/: HorrorPlace-Core-Public-Contracts.md
docs/research/: horrorplace-100-session-and-runtime-research-questions-v1.md
docs/schemas/: invariant_query_language_v1.bnf  style_contract_v1.json  visual_narrative_contract_v1.toml
docs/specs/: haptic_feedback_reference_v1.md  neuro_telemetry_integration_v1.md
docs/styles/: TerraScape.md  machine_canyon_biomech_bci.json  spectral_engraving_dark_sublime.json
engine/: bci_adapter.lua  bci_core.lua  horror_invariants.lua  horrorinvariants.lua  metrics.lua  surprise_director.lua  trajectory_scare.lua
engine/lua/api/core/: H_Contract.lua
enginelibrary/: h_player_envelope_fps.lua  horror_scoring.lua
hpc-core/src/: h_dungeon_memory.lua  h_intensity_bands.lua  h_surprise.lua  h_surprise_adapter.lua
lua/: horror_audio.lua  hpc_node.lua  hpc_run.lua  hpc_run_state_machine.lua
lua/engine/: horroraudio_moods.lua
lua/hpc/: discovery.lua
luaruntime/: hrun.lua
mods/: dreadforge_bf.lua
moods/: DreadForge_Resonance.Contract.lua  HauntedReservoir.ResurrectionEcho.Contract.lua  mood.dreadforge_resonance.v1.json
public-api/: hdirector.lua
registry/: events.json  moods.json  personas.json  regions.json  styles.json
schemas/: audio-landscape-style.v1.json  audiotypedseedv1.json  bci-events-stream-v1.json  bci-geometry-tileset-v1.json  entertainment_metrics_v1.json  eventcontract_v1.json  gods-image-disaster-warden.schema.json  invariants_v1.json  mood_contract.schema.json  nightwhispers-majornpc-v1.json  nightwhispers-zone-v1.json  persona_contract_v1.json  seedcontractv1.json  stylecontract_v1.json
schemas/core/: entertainment-metrics-spine.v1.json  invariants-spine.v1.json  schemassignaturev1.json
scripts/: TerraScapeScene.lua  ai_chat_templates.lua  generate_report.py  mood_lint.lua  resurrectionlint.lua  runstylelint.lua  seed-lint.lua  stylelint.lua  validate_contract_card.lua  validate_invariants.lua  validate_player_envelope_fps.lua  validate_styles.ps1  validatesignature.py
scripts/drift-audit/: report_generator.py
src/: audio_automation.rs  lua_bindings.rs  pcg_generator.rs  spectral_library.rs  style_runtime_validator.lua
src/bci_haptics/: machine_canyon_mapping.lua
tools/: style_lint.lua
ua/runtime/: h_safety.lua
(+16 files in other folders)
